fix(registry-sdk): Ensure optional parameters are valid for app creation - Allow managerAddress for now (until we get authentication added)
